// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CharacterItem - Regression Tests > should render correctly when character is favorite 1`] = `
<div
  class="flex items-center gap-3 p-3  cursor-pointer transition-colors border-t-gray-100 border-t-1 md:rounded-lg  hover:bg-gray-100 "
>
  <div
    class="relative"
  >
    <img
      alt="Rick Sanchez"
      class="w-10 h-10 rounded-full object-cover"
      src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
    />
  </div>
  <div
    class="flex-1 min-w-0"
  >
    <h3
      class="font-medium text-sm truncate"
    >
      Rick Sanchez
    </h3>
    <p
      class="text-xs text-gray-500"
    >
      Human
    </p>
  </div>
  <button
    aria-label="favorite-button"
    class="p-1 h-auto cursor-pointer"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-heart w-4 h-4 fill-secondary-600 text-secondary-600"
      data-testid="heart-button"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
      />
    </svg>
  </button>
  <button
    aria-label="trash-button"
    class="p-1 h-auto cursor-pointer text-gray-400 hover:text-red-500"
    data-testid="trash-button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-trash w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
      />
      <path
        d="M3 6h18"
      />
      <path
        d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
      />
    </svg>
  </button>
</div>
`;

exports[`CharacterItem - Regression Tests > should render correctly when selected 1`] = `
<div
  class="flex items-center gap-3 p-3  cursor-pointer transition-colors border-t-gray-100 border-t-1 md:rounded-lg  md:bg-primary-100 "
>
  <div
    class="relative"
  >
    <img
      alt="Rick Sanchez"
      class="w-10 h-10 rounded-full object-cover"
      src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
    />
  </div>
  <div
    class="flex-1 min-w-0"
  >
    <h3
      class="font-medium text-sm truncate"
    >
      Rick Sanchez
    </h3>
    <p
      class="text-xs text-gray-500"
    >
      Human
    </p>
  </div>
  <button
    aria-label="favorite-button"
    class="p-1 h-auto cursor-pointer"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-heart w-4 h-4 text-gray-400"
      data-testid="heart-button"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
      />
    </svg>
  </button>
  <button
    aria-label="trash-button"
    class="p-1 h-auto cursor-pointer text-gray-400 hover:text-red-500"
    data-testid="trash-button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-trash w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
      />
      <path
        d="M3 6h18"
      />
      <path
        d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
      />
    </svg>
  </button>
</div>
`;

exports[`CharacterItem - Regression Tests > should render without crashing and maintain basic structure 1`] = `
<div
  class="flex items-center gap-3 p-3  cursor-pointer transition-colors border-t-gray-100 border-t-1 md:rounded-lg  hover:bg-gray-100 "
>
  <div
    class="relative"
  >
    <img
      alt="Rick Sanchez"
      class="w-10 h-10 rounded-full object-cover"
      src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
    />
  </div>
  <div
    class="flex-1 min-w-0"
  >
    <h3
      class="font-medium text-sm truncate"
    >
      Rick Sanchez
    </h3>
    <p
      class="text-xs text-gray-500"
    >
      Human
    </p>
  </div>
  <button
    aria-label="favorite-button"
    class="p-1 h-auto cursor-pointer"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-heart w-4 h-4 text-gray-400"
      data-testid="heart-button"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
      />
    </svg>
  </button>
  <button
    aria-label="trash-button"
    class="p-1 h-auto cursor-pointer text-gray-400 hover:text-red-500"
    data-testid="trash-button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-trash w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
      />
      <path
        d="M3 6h18"
      />
      <path
        d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
      />
    </svg>
  </button>
</div>
`;
